2015-10-05  Josh Stone  <jistone@redhat.com>

	* Makefile.am (libasm.so): Add AM_V_CCLD and AM_V_at silencers.

2015-09-23  Mark Wielaard  <mjw@redhat.com>

	* asm_align.c (__libasm_ensure_section_space): Mark as
	internal_function.
	* asm_end.c (__libasm_finictx): Likewise.
	* asm_error.c (__libasm_seterrno): Likewise.

2015-09-22  Mark Wielaard  <mjw@redhat.com>

	* asm_*.c: Remove old-style function definitions.

2015-09-04  Chih-Hung Hsieh  <chh@google.com>

	* asm_addint8.c (FCT): Replace K&R function definition
	with ansi-C definitions.
	* asm_adduint8.c (UFCT): Likewise.
	* asm_begin.c (asm_begin): Likewise.

2014-12-18  Ulrich Drepper  <drepper@gmail.com>

	* Makefile.am: Suppress output of textrel_check command.

2014-11-27  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (libasm.so): Use textrel_check.

2014-04-13  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am: Remove !MUDFLAP conditions.

2013-04-24  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am: Use AM_CPPFLAGS instead of INCLUDES.

2011-02-08  Roland McGrath  <roland@redhat.com>

	* asm_newscn.c (asm_newscn): Remove unused variable.

2010-02-15  Roland McGrath  <roland@redhat.com>

	* Makefile.am: Use config/eu.am for common stuff.

2009-01-10  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am: Use USE_LOCKS instead of USE_TLS.
	* asm_error.c: Always use __thread.  Remove all !USE_TLS code.

2008-12-03  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am [USE_TLS]: Like libasm.so with libpthread.

2008-01-11  Ulrich Drepper  <drepper@redhat.com>

	* libasm.h (DisasmGetSymCB_t): Change type of fourth and fifth
	parameter.
	* disasm_cb.c: Adjust accordingly.

2008-01-08  Roland McGrath  <roland@redhat.com>

	* Makefile.am (euinclude): Variable removed.
	(pkginclude_HEADERS): Set this instead of euinclude_HEADERS.

2007-12-20  Ulrich Drepper  <drepper@redhat.com>

	* disasm_cb.c: Add initial support to resolve addresses to symbols.

2007-02-05  Ulrich Drepper  <drepper@redhat.com>
