@@ -1,3 +1,7 @@
+2016-02-12  Mark Wielaard  <mjw@redhat.com>
+
+	* strip.c (handle_elf): Correct elf_assert shndxdata check.
+
 2016-02-09  Mark Wielaard  <mjw@redhat.com>
 
 	* readelf.c (read_encoded): Move up.
